# flac-raster

./: .gitignore  CHANGELOG.md  CLAUDE.md  FLAC-SPATIAL.md  LICENSE  PUBLISHING.md  README.md  main.py  pixi.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: sonos-pyflac.txt
examples/: create_test_data.py  example_usage.py  spatial_streaming_example.py
src/flac_raster/: __init__.py  cli.py  compare.py  converter.py  metadata_encoder.py  spatial_encoder.py
src/flac_raster.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_data/: sample_dem.flac  sample_dem.json  sample_dem.tif  sample_dem_reconstructed.tif  sample_multispectral.tif  sample_rgb.flac  sample_rgb.json  sample_rgb_reconstructed.tif
testing_dataset/: dem-raw.tif  dem-raw.tif.aux.xml  dem-reconstructed.tif  dem.flac  dem.json  multiband.flac  multiband.json  multiband_reconstructed.tif
tests/: __init__.py  compare_multiband.py  compare_tiffs.py  test_http_range_streaming.py  test_lazy_loading_integration.py
