[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flac-raster"
version = "0.1.1"
description = "Experimental CLI tool for converting TIFF raster data to FLAC format"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Youssef Harby", email = "me@youssefharby.com"}
]
keywords = ["raster", "flac", "geospatial", "compression", "tiff"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "rasterio",
    "typer",
    "rich",
    "tqdm",
    "pyflac",
    "mutagen",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "black>=25.1.0",
    "isort>=6.0.1",
    "flake8>=7.3.0",
]

[project.scripts]
flac-raster = "flac_raster.cli:app"

[project.urls]
Homepage = "https://github.com/Youssef-Harby/flac-raster"
Repository = "https://github.com/Youssef-Harby/flac-raster"
Issues = "https://github.com/Youssef-Harby/flac-raster/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100